// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourcesTree After changing expanded nodes Shows the tree with four.js, five.js and six.js expanded 1`] = `
<div
  className="sources-list"
  onKeyDown={[Function]}
>
  <ManagedTree
    autoExpandAll={false}
    autoExpandDepth={0}
    expanded={
      Array [
        "four.js",
        "five.js",
        "six.js",
      ]
    }
    getChildren={[Function]}
    getParent={[Function]}
    getPath={[Function]}
    getRoots={[Function]}
    itemHeight={21}
    key="full"
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocus={[Function]}
    renderItem={[Function]}
  />
</div>
`;

exports[`SourcesTree Should show the tree with nothing expanded 1`] = `
<div
  className="sources-list"
  onKeyDown={[Function]}
>
  <ManagedTree
    autoExpandAll={false}
    autoExpandDepth={1}
    getChildren={[Function]}
    getParent={[Function]}
    getPath={[Function]}
    getRoots={[Function]}
    itemHeight={21}
    key="full"
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocus={[Function]}
    renderItem={[Function]}
  />
</div>
`;

exports[`SourcesTree When loading initial source Shows the tree with one.js, two.js and three.js expanded 1`] = `
<div
  className="sources-list"
  onKeyDown={[Function]}
>
  <ManagedTree
    autoExpandAll={false}
    autoExpandDepth={0}
    expanded={
      Array [
        "one.js",
        "two.js",
        "three.js",
      ]
    }
    getChildren={[Function]}
    getParent={[Function]}
    getPath={[Function]}
    getRoots={[Function]}
    itemHeight={21}
    key="full"
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocus={[Function]}
    renderItem={[Function]}
  />
</div>
`;
